# ai-nursing-home

./: .gitignore  AGENTS.md  CLAUDE.md  GBrain一线知识平台实施计划.md  JOURNAL.md  Makefile  README.md  VERSION  pyproject.toml
dl-cognee/: .dockerignore  Dockerfile  pyproject.toml
dl-cognee-reranker/: Dockerfile  pyproject.toml
dl-cognee-reranker/dl_cognee_reranker/: main.py  reranker.py  settings.py
dl-cognee/dl_cognee/: auth.py  chunker.py  embedder.py  libraries.py  main.py  routes.py  settings.py  startup.py
dl-cognee/dl_cognee/scripts/: reembed.py
dl-cognee/dl_cognee/storage/: isolated.py  shared.py
dl-control/: Dockerfile  README.md  pyproject.toml
dl-control/dl_control/: bootstrap.py  db.py  i18n.py  i18n_routes.py  llm_denylist.txt  logging.py  main.py  migrations.py  secrets_redaction.py  settings.py
dl-control/dl_control/agents/: api.py  cli_reprovision.py  internal_routes.py  registry.py  reprovision.py  routes.py  schemas.py  service.py
dl-control/dl_control/agents/gbrain/: credentials_service.py  routes.py
dl-control/dl_control/agents/provisioning/: compose_mirror.py  config_gen.py  docker_client.py  errors.py  fs_safety.py  per_agent_db.py  service.py  skill_catalog.py  workspace.py
dl-control/dl_control/audit/: audit_mirror.py  internal_routes.py  routes.py  service.py
dl-control/dl_control/auth/: errors.py  middleware.py  password_change.py  routes.py  service.py  sessions.py
dl-control/dl_control/channels/: normalize.py
dl-control/dl_control/channels/feishu/: allowfrom_writer.py  credentials_routes.py  credentials_service.py  feishu_client.py  pairings_routes.py  pairings_service.py  pending_reader.py  reconciler.py
dl-control/dl_control/dashboard/: routes.py
dl-control/dl_control/libraries/: cli.py  db_lifecycle.py  routes.py  service.py
dl-control/dl_control/llm/: routes.py  status.py
dl-control/dl_control/middleware/: health_signal.py
dl-control/dl_control/migrations/: 0001_users.sql  0002_audit_log.sql  0003_agent_registry.sql  0004_agent_status_lifecycle.sql  0005_feishu_pairing.sql  0006_p4_tier1.sql  0007_p5_cognee.sql  0008_p6_llm.sql  0009_p7_ota.sql  0010_precreated_agents.sql  0011_workflow_runner.sql  0012_agent_call_dispatch.sql  0013_workflow_default_agent.sql  0014_cognee_v2_migration.sql
dl-control/dl_control/ota/: __init__.py  admin_routes.py  internal_routes.py  roll_openclaw.py  seed_install_digest.py  status.py
dl-control/dl_control/per_agent_migrations/: 0001_audit_log_mirror.sql  migrations.py
dl-control/dl_control/per_library_migrations/: 0001_cognee_iso.sql  0002_cognee_iso_v2.sql  migrations.py
dl-control/dl_control/precreated/: __init__.py  apply.py  errors.py  loader.py  reconciler.py  suppressions.py
dl-control/dl_control/static/: nursing.css  styles.css
dl-control/dl_control/templates/: _lang_toggle.html  _llm_status.html  base.html  login.html
dl-control/dl_control/templates/admin/: _ota_widget.html  agent_detail.html  agents_list.html  audit_list.html  dashboard.html  password_change.html
dl-control/dl_control/templates/nursing/: chat.html  chat.html.bak  dashboard.html  test-roles.html
dl-control/dl_control/workflows/: __init__.py  admin_routes.py  agent_calls.py  agent_routes.py  brand_config.py  config_cache.py  dispatch.py  email_send.py  errors.py  internal_routes.py  ledger.py  loader.py  manual.py  model.py  queries.py  registry.py  runner.py  runs.py  schedules.py  wake.py
dl-control/dl_control/workflows/brand_configs/: _template.yaml  daien.yaml  yonghe.yaml
dl-control/dl_control/workflows/flows/: __init__.py  catalog.py  content_pipeline.py  hr_onboarding.py  nursing_ops.py
dl-control/precreated_agents/: README.md
dl-control/precreated_agents/agent-manager/: agent.yaml
dl-control/precreated_agents/agent-manager/workspace/: HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md
dl-control/precreated_agents/building-1/: agent.yaml
dl-control/precreated_agents/building-1/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/building-2/: agent.yaml
dl-control/precreated_agents/building-2/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/building-3/: agent.yaml
dl-control/precreated_agents/building-3/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/building-4/: agent.yaml
dl-control/precreated_agents/building-4/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/building-5/: agent.yaml
dl-control/precreated_agents/building-5/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/building-6/: agent.yaml
dl-control/precreated_agents/building-6/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/content-ops/: agent.yaml
dl-control/precreated_agents/content-ops/workspace/: IDENTITY.md  SOUL.md  TOOLS.md
dl-control/precreated_agents/director/: agent.yaml
dl-control/precreated_agents/director/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/general-assistant/: agent.yaml
dl-control/precreated_agents/general-assistant/workspace/: IDENTITY.md  SOUL.md  TOOLS.md
dl-control/precreated_agents/knowledge-base/: agent.yaml
dl-control/precreated_agents/knowledge-base/workspace/: IDENTITY.md  SOUL.md  TOOLS.md
dl-control/precreated_agents/logistics-dept/: agent.yaml
dl-control/precreated_agents/logistics-dept/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/nursing-dept/: agent.yaml
dl-control/precreated_agents/nursing-dept/workspace/: SOUL.md  TOOLS.md
dl-control/precreated_agents/operations-a/: agent.yaml
dl-control/precreated_agents/operations-b/: agent.yaml
dl-llm-proxy/: Dockerfile  pyproject.toml
dl-llm-proxy/dl_llm_proxy/: audit.py  auth.py  main.py  rate_limit.py  settings.py
dl-ota-watcher/: Dockerfile  pyproject.toml
dl-ota-watcher/dl_ota_watcher/: __init__.py  db.py  docker_ops.py  journal.py  licence.py  main.py  manifest.py  self_swap.py  settings.py  signing.py  state_machine.py  state_store.py  tier1_dsn.py  web.py
dl_shared/: __init__.py  manifest_verify.py  pyproject.toml  rate_limit.py  secrets.py
dl_shared/tests/: test_manifest_verify.py
docs/: 调研问卷-三福养老院.md  (+2 more)
(+244 files in other folders)
