[project]
name = "dato"
version = "0.0.0"
description = "On-prem multi-agent appliance — OpenClaw-based successor to dl_agents."
requires-python = ">=3.12"
readme = "README.md"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "psycopg[binary,pool]>=3.2",
  "redis>=5.1",
  "ruff>=0.7",
  "pyyaml>=6.0",
  "tenacity>=9.0",
  "structlog>=24",
  "cryptography>=48.0.0",
  "starlette>=1.0.0",
  "fakeredis>=2.20",
]

[tool.uv.sources]
dl_shared = { path = "dl_shared" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
