[project]
name = "dl-cognee"
version = "0.0.0"
description = "dato knowledge service — bge-m3 (FlagEmbedding) + pgvector"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "FlagEmbedding>=1.3",
    "transformers<5",
    "sentencepiece>=0.2",
    "structlog>=24.4",
    "httpx>=0.27",
    "prometheus-client>=0.21",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "coverage>=7.6",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["dl_cognee"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
