[project]
name = "dl-ota-watcher"
version = "0.0.0"
description = "dato OTA self-update watcher service"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "cryptography>=43",
    "aiodocker>=0.24",
    "redis[hiredis]>=5.1",
    "structlog>=24.4",
]

[project.scripts]
dl-ota-watcher = "dl_ota_watcher.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dl_ota_watcher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
