[project]
name = "dl_shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["cryptography", "starlette"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# pyproject.toml lives inside the package directory, so the modules
# (__init__.py, rate_limit.py, secrets.py) are siblings of this file.
# `packages = ["."]` packaged them flat into the wheel root, which made
# `import dl_shared` fail on any fresh install. The sources remap below
# republishes the root-level modules under a real `dl_shared/` package.
[tool.hatch.build.targets.wheel]
include = ["__init__.py", "rate_limit.py", "secrets.py", "manifest_verify.py"]

[tool.hatch.build.targets.wheel.sources]
"" = "dl_shared"
